# LetsCook_APP

./: .gitignore  AchievementsPage.tsx  BONDING_CURVE_FIXES.md  HypeVotingPage.tsx  RENDER_DEPLOYMENT_GUIDE.md  TransferHookPage.tsx  UserStatsPage.tsx  convert-existing-keypair.ps1  convert-keypair.ps1  convert-wallet.ps1  convert-wallet.sh  count-numbers.ps1  create-test-keypair.ps1  decoded_keypair.json  deploy-frontend.ps1  deploy.ps1  devnet-deployer-keypair.json  extract-keypair.js  generate-base58-keypair.js  generate-keypair.js  generate-wallet-secret.ps1  generate-wallet-secret.sh  readme.md  render.yaml  setup-fixed.ps1  setup-simple.ps1  setup-wallet-fixed.ps1  setup-wallet.ps1  setup-wallet.sh  setup.ps1  supabase_schema.sql  test-base64-keypair.ps1  test-base64-keypair.sh  test-deployment.ps1  test-deployment.sh  update-frontend-program-id.ps1  update-frontend-program-id.sh  update-program-id.ps1  verify-base64.ps1  verify-program.js
.github/workflows/: deploy.yml  test.yml
Backend/: Anchor.toml  DEPLOY_DEVNET.ps1  DEPLOY_DEVNET_SIMPLE.ps1  DEPLOY_NOW.ps1  DEPLOY_SIMPLE.ps1  DEPLOY_SIMPLE_WORKING.ps1  DEPLOY_WORKING.ps1  devnet_program_id.txt  optimize-program-size.sh
Backend/.github/workflows/: deploy.yml
Backend/citizens/: Cargo.toml
Backend/citizens/src/: accounts.rs  betray.rs  instruction.rs  lib.rs  processor.rs  resolve_mission.rs  start_mission.rs  state.rs  utils.rs
Backend/citizens/src/plugins/: mod.rs
Backend/client/: Cargo.toml
Backend/client/src/: main.rs  state.rs
Backend/listings/: Cargo.toml
Backend/listings/src/: accounts.rs  create_listing.rs  entrypoint.rs  instruction.rs  lib.rs  processor.rs  remove_listing.rs  state.rs  utils.rs
Backend/program/: Cargo.toml
Backend/program/src/: accounts.rs  achievements.rs  common.rs  entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
Backend/program/src/amm/: add_rewards.rs  cook_add_liquidity.rs  cook_remove_liquidity.rs  cook_swap.rs  get_amm_rewards.rs  mod.rs  raydium_init.rs  raydium_swap.rs  state.rs  utils.rs
Backend/program/src/amm/plugins/: mod.rs
Backend/program/src/hybrid/: claim_asset.rs  list_asset.rs  state.rs  wrap_asset.rs
Backend/program/src/hybrid/plugins/: mod.rs
Backend/program/src/launch/: claim_tokens.rs  instant_launch.rs  state.rs
Backend/program/src/utils/: common.rs  core.rs  mod.rs  token.rs
Backend/programs/: Cargo.toml  rustfmt.toml
Backend/programs/src/: accounts.rs  amm.rs  bonding_curve.rs  bot_detection.rs  common.rs  error.rs  events.rs  instruction.rs  lib.rs  processor.rs  state.rs
Backend/programs/src/hybrid/: buy_asset.rs  claim_asset.rs  edit_collection.rs  launch_collection.rs  list_asset.rs  mint_asset.rs  mint_random_asset.rs  mod.rs  unlist_asset.rs  wrap_asset.rs
Backend/programs/src/instruction/: accounts.rs
Backend/programs/src/launch/: claim_refund.rs  claim_tokens.rs  create_amm_quote.rs  create_launch.rs  create_pool_on_graduation.rs  edit_launch.rs  instant_launch.rs  join_launch.rs  mod.rs  state.rs
Backend/programs/src/launch/plugins/: mod.rs
Backend/programs/src/listings/: create_listing.rs  create_unverified_listing.rs  edit_listing.rs  mod.rs
Backend/programs/src/utils/: common.rs  core.rs  mod.rs  mpl_compat.rs  supply.rs  token.rs
Backend/transfer_hook/client/: Cargo.toml
Backend/transfer_hook/program/: Cargo.toml
Backend/transfer_hook/program/src/: accounts.rs  instruction.rs  processor.rs  state.rs
Frontend/: .gitignore  .render-build.sh  .replit  add-metadata.js  add-metadata.ps1  admin-keypair.json  build.sh  clear-storage.js  convert-keypair.js  create-spl-metadata.js  deploy-mainnet.sh  devnet.env  extract-discriminators.js  generate-admin-keypair.js  generate-admin-keypair.ps1  package-lock.json  package.json  production.env.template  setup-native-frontend.sh  test-direct-metadata.js  test-metadata-service.js  vite-plugin-buffer-polyfill.ts  vite.config.ts
Frontend/attached_assets/: Pasted-Let-s-Cook-Raffle-Based-Token-Launchpad-on-Solana-Outsmarting-the-Dev-Dump-Picture-this-You-re-hyp-1759535127669_1759535127670.txt  Pasted-UI-Elements-Typography-Use-a-bold-modern-sans-serif-font-e-g-Poppins-or-Montserrat-for-heading-1759366543734_1759366543735.txt
Frontend/client/: _env  env.example  index.html  test-parsing.js  update-env.ps1
Frontend/client/src/: App.tsx  index.css  (+2 more)
Frontend/database/: README.md
Frontend/server/: index.ts  routes.ts  storage.ts  supabase.ts  vite.ts
Frontend/shared/: schema.ts
LetsCookOnly/: Anchor.toml  Cargo.toml  dockerfile
LetsCookOnly/programs/LetsCook/: Cargo.toml
LetsCookOnly/programs/LetsCook/src/: accounts.rs  achievements.rs  common.rs  entrypoint.rs  error.rs  lib.rs  processor.rs  state.rs
LetsCookOnly/programs/LetsCook/src/amm/: add_rewards.rs  cook_add_liquidity.rs  cook_init.rs  cook_init_external.rs  cook_swap.rs  raydium_classic_swap.rs  state.rs  utils.rs
LetsCookOnly/programs/LetsCook/src/hybrid/: buy_asset.rs  claim_asset.rs  edit_collection.rs  list_asset.rs  mint_asset.rs  mint_random_asset.rs  state.rs  unlist_asset.rs  wrap_asset.rs
LetsCookOnly/programs/LetsCook/src/hybrid/plugins/: mod.rs
LetsCookOnly/programs/LetsCook/src/launch/: check_tickets.rs  create_launch.rs  state.rs
LetsCookOnly/programs/LetsCook/src/launch/plugins/: mod.rs
LetsCookOnly/programs/LetsCook/src/utils/: common.rs  core.rs  token.rs
LetsCookOnlyx/: Anchor.toml
LetsCookOnlyx/programs/letscook/: Cargo.toml
LetsCookOnlyx/programs/letscook/src/: lib.rs
src/: verify-program.mjs
~/: id.json
(+170 files in other folders)
