[package]
name = "citizens"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "=1.5.1"
solana-program = "=1.18.11"
shank = "0.4.2"
sha2 = "0.10.2"
mpl-core = "0.7.1"
spl-token = {version = "4.0.3", features = ["no-entrypoint"]}
spl-token-2022 = {version = "3.0.4", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "3.0.4", features = ["no-entrypoint"]}

[lib]
name = "citizens"
crate-type = ["cdylib", "lib"]
