[package]
name = "solana_rust_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
solana-sdk = "1.16.7"
solana-client = "1.16.7"
solana-program = "1.16.7"
spl-token = {version = "3.5.0"}
borsh = "0.9.3"
thiserror = "1.0.24"
solana-transaction-status = "1.10.26"
rand = "0.8.5"
spl-associated-token-account = "1.1.3"
pyth-sdk-solana = "0.10.0"
