[package]
name = "LetsCook"
version = "1.0.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.17"
thiserror = "1.0"
borsh = "1.4"
arrayref = "0.3.6"
sha2 = "0.10"

# SPL Crates (compatible versions)
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "1.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1", features = ["no-entrypoint"] }


[lib]
crate-type = ["cdylib", "lib"]

[features]
custom-heap = []
custom-panic = []


