[package]
name = "LetsCook"
version = "1.0.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.18.26"
thiserror = "1.0"
borsh = "0.10.3"
arrayref = "0.3.6"
sha2 = "0.10"
# SPL Crates (compatible versions)
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "1.0.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.2.0"
spl-type-length-value = "0.3.0"
spl-associated-token-account = { version = "2.0.0", features = ["no-entrypoint"] }
spl-pod = "0.2.2"

[lib]
crate-type = ["cdylib", "lib"]

[features]
custom-heap = []
custom-panic = []
