[package]
name = "transfer_hook"
version = "1.0.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.17.22"
thiserror = "1.0.24"
spl-token = {version = "4.0.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
borsh = "0.9.3"
spl-associated-token-account = {version = "1.1.3", features = ["no-entrypoint"]}
enum-map = "1.1.1"
spl-token-2022 = {version = "1.0.0", features = ["no-entrypoint"]}
spl-discriminator = "0.1.0"
spl-type-length-value = "0.3.0"
spl-tlv-account-resolution = "0.4.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
toml_edit = "^0.20"
proc-macro-crate = "^2.0.2"

[lib]
crate-type = ["cdylib", "lib"]
