[package]
name = "letscook"
version = "1.0.0"
edition = "2021"
license = "WTFPL"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.31.0"

# Minimal dependencies for basic functionality
thiserror = "1.0"
borsh = "1.5.1"